# jacques

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/jacques/: __init__.py
src/jacques.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jacques/dataloading/: __init__.py  custom_datasets.py  datamodule.py
src/jacques/inference/: __init__.py  model_checkpoint.ckpt  output.py  predictor.py  save_predictions.py
src/jacques/model_building/: layers.py  model.py  model_config.py
