[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jacques"
version = "0.2.1"
authors = [
  { name="Justine Talpaert", email="justine.daudon@ird.fr" },
]
description = "A package to classify useless and useful images according to marine ecological interests."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow>=8.4.0",
    "tqdm>=4.65.0", 
    "importlib-resources>=5.12.0",
    "pandas>=1.2.3",
    "numpy>1.18.1",
    "matplotlib>=3.5.3",
    "pytorch-lightning>=1.9.3",
    "zenodo_get"
]

[project.urls]
"Homepage" = "https://github.com/6tronl/jacques"
"Bug Tracker" = "https://github.com/6tronl/jacques/issues"
